<resources>
    <string name="app_name">МЕСТО РЯДОМ</string>

    <!--Навигационное окно боковое-->
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!--Навигационное окно снизу-->

    <string name="map_screen">НАВИГАЦИЯ</string>
    <string name="settings_screen">НАСТРОЙКИ</string>

    <!--Остальное-->
    <string name="todo">TODO</string>
    <string name="loading_error_msg"> Ошибка при загрузке информации </string>
    <string name="hint_search">A324, Кафе, Точка кипения...</string>
    <string name="body_build">Корпус G</string>
    <string name="place_build">Кампус ДВФУ</string>


    <string name="intro_text_1">
    Потерялись на кампусе?\n
     Нажмите кнопку\n
    определение\n
    </string>
    <string name="intro_text_2">
        Используйте нашу строку\n
        поиска, чтобы найти нужную\n
        аудиторию, конференц-зал,\n
        кафе и другие случайные\n
        объекты.\n\n
        Только тс-с, туалет там же\n
        можно найти)
    </string>
    <string name="intro_text_3">
        Самые нужные вам\n
        категории мест находятся в\n
        быстрой доступности в\n
        режиме поиска.\n\n
        Вам даже не надо вводить\n
        поисковой запрос
    </string>
    <string name="intro_text_4">
        Мы точно говорим.\n
        А еще мы знаем китайский. А вы?
    </string>
    <string name="intro_text_5">
        На этом все. Фичи пока\n
        закончились. Мы вас\n пригласим сюда когда,\n
        что-то новое появится.\n\n
        Пойдем искать место?\n
        Оно рядом.
    </string>

    <string name="intro_htext_1">Мы знаем где вы</string>
    <string name="intro_htext_2">Найдите место</string>
    <string name="intro_htext_3">Все нужное рядом</string>
    <string name="intro_htext_4">Ду ю спик Инглиш?</string>
    <string name="intro_htext_5">Ну что начнем?</string>
    <string name="text_position">Сервис позицинирования внутри помещений</string>

    <string name="authentication_failed">Ошибка аутентификации</string>
    <string name="verification_email">Письмо-подтверждение отправлено вам на почту</string>

    <string name="login_with_vKontakte">Войти через вконтакте</string>
    <string name="login_button">Войти</string>
    <string name="registration_button">Регистрация</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="consent">Я принимаю условия использования\n
        и политику конфидеценциальности</string>

    <string name="help_suggestion_where_are_you">Где вы?</string>
    <string name="help_suggestion_define_your_location">Выберите на карте место, где вы находитесь</string>
    <string name="what_are_you_seeking_for">Что вы ищете?</string>
    <string name="bottom_sheet_seek_comply">Выберите категорию или введите запрос</string>
    <string name="place_search_hint">А324, Кафе, Точка кипения…</string>
    <string name="next">Далее</string>
    <string name="skip_training">Пропустить обучение</string>

</resources>
