<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <include
        android:id="@+id/include"
        layout="@layout/content_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/view_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_text" />

    <View
        android:id="@+id/view_text"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="@drawable/top_round_corner"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/rotate_button_menu"
        app:layout_constraintBottom_toBottomOf="@+id/view_text"
        app:layout_constraintStart_toStartOf="@+id/view_text"
        app:layout_constraintTop_toTopOf="@+id/view_text" />

    <TextView
        android:id="@+id/textView.Housing"
        style="@style/Text.Primary.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/body_build"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_text" />

    <TextView
        android:id="@+id/textView.Campus"
        style="@style/Text.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_build"
        app:layout_constraintBottom_toBottomOf="@+id/view_text"
        app:layout_constraintEnd_toEndOf="@+id/view_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView.Housing" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/White"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_button_location" />

    <View
        android:id="@+id/divider"
        android:layout_width="50dp"
        android:layout_height="7dp"
        android:layout_marginBottom="8dp"
        android:background="#4DFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/view_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_search"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bottom_round_corner"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_search_nested"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/bottom_round_corner_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_search" />

    <EditText
        android:id="@+id/edittext_search"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:autofillHints="cabinet number"
        android:background="@android:color/transparent"
        android:hint="@string/hint_search"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/view_search_nested"
        app:layout_constraintEnd_toEndOf="@+id/view_search_nested"
        app:layout_constraintStart_toStartOf="@+id/view_search_nested"
        app:layout_constraintTop_toTopOf="@+id/view_search_nested"
        android:textCursorDrawable="@null"/>


</androidx.constraintlayout.widget.ConstraintLayout>