<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:background="@drawable/round_corner"
        android:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/ConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ConstraintLayout">

        <ImageView
            android:id="@+id/intro_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_e_wayfind" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/bottom_round_corner"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/intro_htext"
            style="@style/Intro.Primary.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_htext_1"
            app:layout_constraintBottom_toTopOf="@+id/intro_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <TextView
            android:id="@+id/intro_text"
            style="@style/Intro.Primary"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:text="@string/intro_text_1"
            app:layout_constraintBottom_toTopOf="@+id/intro_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />


        <Button
            android:id="@+id/intro_button"
            style="@style/Text.Primary"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_intro"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="Далее"
            android:textAllCaps="false"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/intro_giptext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/intro_giptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Пропустить обучение"
            android:textColor="#AC975F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>